package Aula3;

public class Administrador extends Usuario {
    
}