package Aula3;

public class Aluno extends Usuario {
    
}
