package Aula3;

public class Bibliotecario extends Usuario {
    
}
