package Aula3;

public class Professor extends Usuario {
    
}
